--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="custom-links">
           <a class="custom-link" href="static/appendix/wake_appendix.pdf" target="_blank">More Results</a>
-          <a class="custom-link" href="https://github.com/xuyaoxun/WAKE" target="_blank">Code</a>
+          <a class="custom-link" href="https://github.com/thuhcsi/WAKE" target="_blank">Code</a>
         </div>
       </div>
     </div>
